--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
+import { SEO } from "astro-seo";
 interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
@@ -14,6 +16,33 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<SEO
+			title={title}
+			description={description}
+			openGraph={{
+				basic: {
+					title: `${title} | ${description}.`,
+					type: "og:image",
+					image: "https://user-images.githubusercontent.com/5182256/131216951-8f74f425-f775-463d-a11b-0e01ad9fce8d.png",
+				}
+			}}
+			twitter={{
+				creator: "@jonasmerlins1"
+			}}
+			extend={{
+				// extending the default link tags
+        link: [{ rel: "icon", href: "/favicon.ico" }],
+				// extending the default meta tags
+        meta: [
+					{
+						name: "twitter:image",
+						content: "https://user-images.githubusercontent.com/5182256/131216951-8f74f425-f775-463d-a11b-0e01ad9fce8d.png",
+					},
+					{ name: "twitter:title", content: "Astro Theme Garden" },
+					{ name: "twitter:description", content: "Astro Starter Theme for building digital gardens." },
+				],
+			}}
+		/>
 		<title>{title}</title>
 	</head>
 	<body>
