A: Added sidebar, header, form, functions, and more

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
-<Layout title="Astro Garden Theme | Build your digital garden with Astro">
+<BaseLayout title="Astro Garden Theme | Build your digital garden with Astro" description="This is the home page.">
 	<main>
 		<div>
 			<h1>Astro Garden Theme</h1>
+			<p>Hi welcome to the Astro Garden Theme!</p>
 		</div>
 	</main>
-</Layout>
+</BaseLayout>
 
