A: Added Header and Navbar to BaseLayout + ProfileCard to Home page

--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -1,3 +1,13 @@
 ---
 
 ---
+
+<nav class="flex justify-center w-full">
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/stories">Stories</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/tags">Tags</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/sprints">Sprints</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/posts">Posts</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/wiki">Wiki</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/rss">RSS</a><span class="px-4">|</span>
+    <a class="font-bold hover:text-orange-500 hover:underline hover:underline-offset-2" href="/donate">Donate</a><span class="px-4">|</span>
+</nav>
