--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import ProfileCard from "../components/home/ProfileCard.astro";
 ---
 
 <BaseLayout title="Astro Garden Theme | Build your digital garden with Astro" description="This is the home page.">
@@ -8,6 +9,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 			<h1>Astro Garden Theme</h1>
 			<p>Hi welcome to the Astro Garden Theme!</p>
 		</div>
+		<ProfileCard />
 	</main>
 </BaseLayout>
 
