--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,7 +1,17 @@
 ---
+import Navbar from "../ui/Navbar.astro";
 
 ---
 
-<header class="bg-white shadow-md p-4">
-    <h1 class="text-2xl font-bold">Header</h1>
+<header class="bg-sky-200 shadow-md p-4 flex flex-col items-center">
+    <div class="bg-slate-800 rounded-lg p-8 hover:bg-slate-50 text-slate-50 hover:text-slate-950 font-bold w-fit flex justify-center my-6">
+        <a href="/" class="text-5xl font-bold  hover:underline hover:underline-offset-2">Astro Garden Theme</a>
+    </div>
+
+    <Navbar />
+
+
+
+
+
 </header>
