--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -66,5 +66,8 @@ const { title, description } = Astro.props;
 			</main>
 		</div>
 	</div>
+	<script>
+		import "../lib/menu.js";
+	</script>
 	</body>
 </html>
